--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/class-validator": "^0.13.4",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/platform-express": "^10.0.0",
+    "class-validator": "^0.14.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mariadb": "^3.2.0",
