--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/jwt": "^10.1.1",
     "@nestjs/passport": "^10.0.1",
     "@nestjs/platform-express": "^10.0.0",
+    "@prisma/client": "^5.3.1",
     "@types/passport-local": "^1.0.35",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -61,7 +62,8 @@
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "prisma": "^5.3.1"
   },
   "jest": {
     "moduleFileExtensions": [
